# TF-AI-QC

./: .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: .env.local.example  .env.production.template  nixpacks.toml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: cli.py  main.py
backend/app/api/routes/: coaching.py  health.py  internal.py  reports.py  revisions.py  rules.py
backend/app/core/: auth.py  config.py  database.py  storage.py
backend/app/db/: seed_rules.py
backend/app/models/: __init__.py  base.py  qc_result.py  report.py  revision.py  rule.py  user.py
backend/app/services/: notifications.py  qc_service.py
backend/app/services/ai/: ollama_client.py
backend/app/services/coaching/: pattern_detector.py  recommendations.py
backend/app/services/ingest/: extractor_factory.py  pdf_extractor.py  report_data.py  xml_parser.py
backend/app/services/integrations/: bubble_client.py
backend/app/services/privacy/: pii_scrubber.py
backend/app/services/rules/: base_rule.py  engine.py  quality_scorer.py
backend/app/services/rules/gse/: rules.py
backend/app/services/rules/uad_format/: rules.py
backend/app/services/workflow/: state_machine.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_health.py  test_reports_api.py  test_revisions_api.py  test_rules_api.py
backend/tests/unit/: test_auth.py  test_coaching_patterns.py  test_pii_scrubber.py  test_recommendations.py  test_state_machine.py  test_validate_file.py
context/: README.md
(+53 files in other folders)
