[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tf-ai-qc"
version = "0.1.0"
description = "True Footage AI-Powered Appraisal QC Platform"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # File storage (Cloudflare R2 — S3-compatible)
    "boto3>=1.34.0",

    # AI — Ollama (OpenAI-compatible) + Claude fallback
    "openai>=1.35.0",
    "anthropic>=0.30.0",

    # Auth — Bubble token verification
    "python-jose[cryptography]>=3.3.0",

    # Config
    "pydantic-settings>=2.3.0",

    # Email
    "resend>=2.0.0",

    # XML parsing (UAD 3.6)
    "lxml>=5.2.0",

    # PDF extraction
    "pdfplumber>=0.11.0",

    # PDF generation (coaching reports)
    "reportlab>=4.2.0",

    # HTTP client (notifications, Bubble API)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
